--- a/docs-content/ha-with-external-lb.html.md.erb
+++ b/docs-content/ha-with-external-lb.html.md.erb
@@ -54,7 +54,7 @@ To find the IP address for your Heartbeat back end:
 
 ## <a id='find-nozzle-ip'></a> Find Nozzle IPs
 
-To find the IP address for your Heartbeat back end:
+To find the IP address for your Heartbeat nozzle:
 
 1. Open the Status tab.
 1. Copy the value in the **IPS** column for the **Heartbeat PCF Monitoring nozzle job**.
