--- a/docs-content/ha-with-external-lb.html.md.erb
+++ b/docs-content/ha-with-external-lb.html.md.erb
@@ -3,8 +3,7 @@ title: High Availability
 owner: Partners
 ---
 
-This topic describes implementation of high availability for Altoros Heartbeat for Pivotal Cloud Foundry (PCF)
-using an external load balancer.
+This topic describes implementation of high availability for Altoros Heartbeat for Pivotal Cloud Foundry (PCF) using an external load balancer.
 
 
 ## <a id='lb-config'></a> External Load Balancer Configuration
