--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,6 +5,16 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
+## <a id="v1.2.0"></a> v1.2.0
+
+**Release Date:** Oct 19, 2018
+
+New features available in this release:
+
+* Requires stemcell 3586 series.
+* BOSH DNS is enabled by default for Altoros Heartbeat components.
+* Consul removed from the tile dependencies.
+
 ## <a id="v1.1.0"></a> v1.1.0
 
 **Release Date:** May 30, 2018
