--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -63,11 +63,11 @@ The following table provides version and version-support information about Altor
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.1.0</td>
+        <td>v1.2.0</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>May 30, 2018</td>
+        <td>October 19, 2018</td>
     </tr>
     <tr>
         <td>Software component version</td>
@@ -75,11 +75,11 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v1.10.x, v1.11.x, v1.12.x, v2.0.x, and v2.1.x</td>
+        <td>v2.1.x, v2.2.x, and v2.3.x</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Services (PAS) version(s)</td>
-        <td>v1.10.x, v1.11.x, and v1.12.x, v2.0.x and v2.1.x</td>
+        <td>v2.1.x, v2.2.x, and v2.3.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
@@ -89,7 +89,7 @@ The following table provides version and version-support information about Altor
         <td>IPsec support?</td>
         <td>No</td>
     </tr>
-</table> 
+</table>
 
 
 ## <a id="prerequisites"></a> Prerequisites
