--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -83,7 +83,7 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>IaaS support</td>
-        <td>AWS, OpenStack, GCP and VMware vSphere</td>
+        <td>AWS, OpenStack, GCP, and VMware vSphere</td>
     </tr>
     <tr>
         <td>IPsec support?</td>
