Adds trusty warning and stemcell line to snapshot[#163731923]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -3,6 +3,11 @@ title: Altoros Heartbeat for PCF
 owner: Partners
 ---
 
+<p class="note warning"><strong> WARNING:</strong>
+This tile requires a Trusty stemcell.
+The end of life date for Ubuntu Trusty is April 2019.
+If a security vulnerability is found on this stemcell after April, it will not be fixed.</p>
+
 This documentation describes the Altoros Heartbeat for Pivotal Cloud Foundry (PCF) tile. Installing this tile
 creates a service that enables operators and app developers to track all system and application metrics
 from their PCF installation in one place.
@@ -54,7 +59,6 @@ Altoros Heartbeat for PCF includes the following key features:
 
 ## <a id="snapshot"></a> Product Snapshot
 
-<p class='note'><strong>Note:</strong> As of PCF v2.0, Elastic Runtime is renamed Pivotal Application Service (PAS).</p>
 
 The following table provides version and version-support information about Altoros Heartbeat for PCF.
 
@@ -80,6 +84,10 @@ The following table provides version and version-support information about Altor
     <tr>
         <td>Compatible Pivotal Application Services (PAS) version(s)</td>
         <td>v2.1.x, v2.2.x, and v2.3.x</td>
+    </tr>
+    <tr>
+        <td>BOSH stemcell version</td>
+        <td>Ubuntu Trusty</td>
     </tr>
     <tr>
         <td>IaaS support</td>
