update topic in cross-ref[#164118803]

--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -19,7 +19,7 @@ and makes this information available to Altoros Heartbeat over the network.
 To complete the collectd add-on installation:
 
 * You must be a PCF operator with admin rights.
-  For more information, see [Understanding Pivotal Cloud Foundry User Types](https://docs.pivotal.io/pivotalcf/customizing/user-types.html#operator).
+  For more information, see [Operators](https://docs.pivotal.io/pivotalcf/customizing/user-types.html#operator).
 * You must have Pivotal Operations Manager (Ops Manager) v1.10 or later.
 * Ensure you have at least 128&nbsp;MB of memory free on each VM before deploying collectd add-on. The collectd add-on uses 50&nbsp;MB of memory.
 
