Added new release notes

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -67,11 +67,11 @@ The following table provides version and version-support information about Altor
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.2.0</td>
+        <td>v1.2.1</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>October 19, 2018</td>
+        <td>April 24, 2019</td>
     </tr>
     <tr>
         <td>Software component version</td>
@@ -87,7 +87,7 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>BOSH stemcell version</td>
-        <td>Ubuntu Trusty</td>
+        <td>Ubuntu Xenial</td>
     </tr>
     <tr>
         <td>IaaS support</td>
