--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,6 +5,14 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
+## <a id="v1.2.1"></a> v1.2.1
+
+**Release Date:** Apr 24, 2019
+
+New features available in this release:
+
+* Switched stemcell to xenial.
+
 ## <a id="v1.2.0"></a> v1.2.0
 
 **Release Date:** Oct 19, 2018
