--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -74,11 +74,11 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v2.1.x, v2.2.x, and v2.3.x</td>
+        <td>v2.2.x, v2.3.x, v2.4.x, and v2.5.x</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Services (PAS) version(s)</td>
-        <td>v2.1.x, v2.2.x, and v2.3.x</td>
+        <td>v2.2.x, v2.3.x, v2.4.x, and v2.5.x</td>
     </tr>
     <tr>
         <td>BOSH stemcell version</td>
